2013-11-01  Steve Ellcey  <sellcey@mips.com>

	* Makefile.am (baseboard_SCRIPTS): Add multi-sim.exp baseboard.
	* Makefile.in: Regenerate.
	* baseboards/multi-sim.exp: New.

2013-10-31  Anton Kolesov  <anton.kolesov@synopsys.com>

	* lib/remote.exp (standard_reboot): Return 1 instead of an empty string.
	(remote_reboot): Add comment explaining return value of this procedure.
	* doc/ref.xml (remote_reboot, standard_reboot): Document procedures.
	* doc/dejagnu.texi: Regenerate.

2013-10-05  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* baseboards/unix.exp: Add gdb settings to not use hardware
	watchpoints in sparc64 running GNU/Linux.

2013-06-17  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* runtest.exp (libdirs): New global variable.
	(load_lib): Append libdirs to search_and_load_files directories.
	* doc/ref.xml (load_lib): Document global variable libdirs.
	* doc/dejagnu.texi: Regenerate.
	* testsuite/runtest.all/load_lib.exp: New testcase.
	* Makefile.am (TESTSUITE_FILES): Add new testcase.
	* Makefile.in: Regenerate.

2013-06-15  Ben Elliston  <bje@gnu.org>

	* configure.ac: If DEJAGNU is unset, set it to /dev/null.
	* Makefile.am: Export DEJAGNU.
	* configure: Likewise.
	* Makefile.in: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix typos.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix number of columns in table.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix rendering errors around programlisting.
	* doc/ref.xml: Likewise.
	* doc/dejagnu.texi: Regenerate.

2013-06-15  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* doc/user.xml: Fix spacing before productname.
	* doc/dejagnu.texi: Regenerate.

2013-06-12  Bernhard Reutner-Fischer  <aldot@gcc.gnu.org>

	* testsuite/runtest.all/default_procs.tcl (send_log): Use the