@@ -1,3 +1,8 @@
+2013-12-08  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* lib/dg.exp (dg-test): Don't put the expected and actual output
+	of a pattern test in the test name; send it to the log instead.
+
 2013-11-01  Steve Ellcey  <sellcey@mips.com>
 
 	* Makefile.am (baseboard_SCRIPTS): Add multi-sim.exp baseboard.
